css/default.css
/* ... */
ol.list-type-lower-alpha > li::before {
    content: counter(list-item, lower-alpha) ".";
}
ol.list-type-upper-alpha > li::before {
    content: counter(list-item, upper-alpha) ".";
}
ol.list-type-lower-roman > li::before {
    content: counter(list-item, lower-roman) ".";
}
ol.list-type-upper-roman > li::before {
    content: counter(list-item, upper-roman) ".";
}

/*=------------------=*/
/*= Weird edge cases =*/
/*=------------------=*/

.markdownBody li > ul + p,
.markdownBody li > ol + p {
    margin-top: 1em;
}

.markdownBody .aux-links-append .list-heading,
.markdownBody .list-heading.aux-links-list-label {
    margin-top: 0;
}

/***********/
/* FIGURES */
/***********/

figure {
    display: flow-root;
    margin: 2em auto 1.75em auto;
    max-width: calc(100% - 5em);
}
@media all and (max-width: 649px) {
    figure {
        max-width: calc(100% - 2em);
    }
}
figure + figure {
    margin-top: 2.75em;
}
@media all and (max-width: 649px) {
    figure + figure {
        margin-top: 2em;
    }
}

.figure-inner-wrapper {
    display: flex;
    flex-flow: column;
    margin: auto;
    width: fit-content;
    max-width: 100%;
}

figure img {
    background-color: var(--background-color);
}

figure img,
figure video {
    outline: 1px solid var(--GW-figure-outline-color);
}
figure.outline-not img,
figure.outline-not video,
figure.outline-not audio {
    outline: none;
}
figure audio {
    display: block;
    margin: 0 auto;
    height: 54px;
    border-radius: 27px;
    position: relative;
    z-index: 1;
    top: 1px;
    box-sizing: border-box;
    border: 1px solid transparent;
}
/*  Special styles for special browsers.
    */
@supports (-moz-user-focus: normal) {
    figure audio {
        height: 42px;
        border-radius: 21px;
    }
}
figure audio:hover {
    border-color: var(--GW-figure-outline-color);
    box-shadow:
        0 0 4px 0 var(--GW-figure-outline-color) inset,
        0 0 4px 0 var(--GW-figure-outline-color);
}

/*  Figure captions.
    */
figcaption {
    font-size: 0.9em;
    font-weight: bold;
    line-height: 1.50;
    margin: auto;
    padding: 0.25em 0.5em calc(0.25em + 1px) 0.5em;
    width: fit-content;
    text-align: center;
}
figcaption strong {
    font-weight: inherit;
    font-variant-caps: small-caps;
}
@media all and (max-width: 649px) {
    figcaption {
        font-size: 0.875em;
    }
}

.caption-wrapper {
    display: block;
    outline: 1px solid var(--GW-figure-caption-outline-color);
    margin: 1px auto 0 auto;
    width: 100%;
}
figure.outline-not .caption-wrapper {
    outline: none;
}
video + .caption-wrapper {
    margin-top: 2px;
}

/*  Enable the various `![caption](/doc/foo/bar.jpg){.width-full}` uses;
    analogous to width-full tables
 */
figure.width-full {
    position: relative;
    max-width: unset;
    clear: both;
}

/* try to get edge-to-edge images on mobile to maximize horizontal space usage */
@media all and (max-width: 649px) {
    #markdownBody figure {
        max-width: unset;
    }
}

/*  Figures in sidenotes should take up the full width of the sidenote.
    */
#markdownBody .sidenote figure {
    margin: 1.5em auto;
    max-width: calc(100% - 2px);
}

/*  Image alt-text.
    */
img::before {
    content: attr(alt);
    font-family: var(--GW-sans-serif-font-stack);
    display: flex;
    flex-flow: column;
    justify-content: center;
    padding: 0.5em 0.75em;
    background-color: var(--background-color);
    text-align: center;
    box-sizing: border-box;
    height: 100%;
}

/***************/
/* BLOCKQUOTES */
/***************/

/*  Main gray background is implemented in initial.css to avoid ‘flash’ on load.
 */

blockquote blockquote {
    margin: 1em 1px;
}

/*=--------------------=*/
/*= Various edge cases =*/
/*=--------------------=*/

.markdownBody blockquote blockquote:first-child {
    margin: 0.25em 1px 1em 1px;
}

.markdownBody blockquote > :last-child,
.markdownBody blockquote > :last-child > :last-child,
.markdownBody blockquote > :last-child > :last-child > :last-child,
.markdownBody blockquote > :last-child > :last-child > :last-child > :last-child {
    margin-bottom: 0;
}
.markdownBody blockquote > :first-child,
.markdownBody blockquote > :first-child > :first-child,
.markdownBody blockquote > :first-child > :first-child > :first-child,
.markdownBody blockquote > :first-child > :first-child > :first-child > :first-child {
    margin-top: 0;
}

/*  Special case for tables in blockquotes.
 */
.markdownBody blockquote > table:last-child,
.markdownBody blockquote > :last-child > table:last-child,
.markdownBody blockquote > :last-child > :last-child > table:last-child,
.markdownBody blockquote > :last-child > :last-child > :last-child > table:last-child {
    margin-bottom: 0.5em;
}
.markdownBody blockquote > table:first-child,
.markdownBody blockquote > :first-child > table:first-child,
.markdownBody blockquote > :first-child > :first-child > table:first-child,
.markdownBody blockquote > :first-child > :first-child > :first-child > table:first-child {
    margin-top: 0.5em;
}

/*  Interviews (e.g. https://gwern.net/Morning-writing#examples).
 */
blockquote p > code:first-child,
blockquote p > a:first-child code:first-child {
    border: none;
    background-color: transparent;
    font-weight: bold;
    font-family: inherit;
    padding: 0;
    font-size: inherit;
}

/*  Tables in blockquotes.
 */
blockquote table {
    font-size: 0.7em;
}
blockquote table table {
    font-size: 1em;
}

/*  Lists in blockquotes.
 */
.markdownBody blockquote li {
    text-align: left;
}

/*  EPITAPH (eg /LARPing)
 */
.text-center {
    text-align: center;
}

/*************/
/* EPIGRAPHS */
/*************/
/* loosely inspired by https://edwardtufte.github.io/tufte-css/#epigraphs */

.epigraph {
    margin: 2em auto;
    padding: 0.5em 2.5em 0.375em 2.5em;
    overflow: hidden;
}
/* ... */

